# katana_driver

katana/: CMakeLists.txt  package.xml
katana/include/katana/: AbstractKatana.h  Katana.h  SimulatedKatana.h  joint_movement_action_controller.h  joint_trajectory_action_controller.h  katana_gripper_grasp_controller.h
katana/launch/: katana_400_6m180.launch
katana/src/: AbstractKatana.cpp  Katana.cpp  Katana300.cpp  KatanaNode.cpp  SimulatedKatana.cpp  joint_movement_action_controller.cpp  joint_trajectory_action_controller.cpp  katana_gripper_grasp_controller.cpp
katana_arm_gazebo/: CMakeLists.txt  package.xml
katana_arm_gazebo/launch/: katana_arm.launch
katana_description/: CMakeLists.txt  package.xml
katana_driver/: CMakeLists.txt  package.xml
katana_joint_movement_adapter/: CMakeLists.txt  package.xml
katana_joint_movement_adapter/include/katana_joint_movement_adapter/: joint_movement_adapter.h
katana_joint_movement_adapter/src/: joint_movement_adapter.cpp
katana_kinect_calibration/: CMakeLists.txt  package.xml
katana_msgs/: CMakeLists.txt  package.xml
katana_teleop/: CMakeLists.txt  package.xml
katana_teleop/include/katana_teleop/: katana_teleop_cyborgevo.h  katana_teleop_key.h  katana_teleop_ps3.h
katana_teleop/src/: katana_teleop_cyborgevo.cpp  katana_teleop_key.cpp  katana_teleop_ps3joy.cpp
katana_tutorials/: CMakeLists.txt  package.xml
katana_tutorials/include/katana_tutorials/: follow_joint_trajectory_client.h  katana_joint_trajectory_client.h
katana_tutorials/launch/: pr2_joint_trajectory_client.launch
katana_tutorials/src/: follow_joint_trajectory_client.cpp  katana_joint_trajectory_client.cpp  test.py  test_vel.sh
kni/: CMakeLists.txt  package.xml
kni/KNI_4.3.0/demo/: Makefile
kni/KNI_4.3.0/demo/control/: testdata
todo/katana_gazebo_plugins/: CMakeLists.txt  package.xml
todo/katana_gazebo_plugins/include/katana_gazebo_plugins/: katana_gripper_joint_trajectory_controller.h
todo/katana_gazebo_plugins/src/: katana_gripper_grasp_controller.cpp
todo/katana_trajectory_filter/: default_plugins.xml  manifest.xml
todo/katana_trajectory_filter/include/katana_trajectory_filter/: katana_trajectory_filter.h
todo/katana_trajectory_filter/src/: katana_trajectory_filter.cpp
