<package>
  <name>katana_arm_gazebo</name>
  <version>0.1.0</version>
  <description>

    This package starts a Neuronics Katana robot arm in the Gazebo simulation environment. It is modeled after the <a href="http://www.ros.org/wiki/pr2_arm_gazebo">pr2_arm_gazebo</a> package by John Hsu.

  </description>
  <author>Martin Günther</author>
  <maintainer email="look@github.com">Martin Günther</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/katana_arm_gazebo</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>katana_description</build_depend>
  <build_depend>pr2_controller_manager</build_depend>
  <build_depend>robot_mechanism_controllers</build_depend>
  <build_depend>katana_gazebo_plugins</build_depend>
  <build_depend>katana_joint_movement_adapter</build_depend>

  <!-- needed for test programs (moving the joints and gripper): -->  
  <build_depend>actionlib</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

</package>


