<?xml version="1.0"?>
<package>
  <name>katana_gazebo_plugins</name>
  <version>0.1.0</version>
  <description>
     This package provides Gazebo plugins to simulate the Katana arm.
  </description>
  <author>Martin Günther</author>
  <maintainer email="look@github.com">Martin Günther</maintainer>

  <license>GPL</license>
  <url>http://ros.org/wiki/katana_gazebo_plugins</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <!-- for gazebo_ros_katana_gripper -->
  <build_depend>object_manipulation_msgs</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>katana_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>spline_smoother</build_depend>

  <export>
    <cpp cflags="-I${prefix}/include" lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib" />
    <gazebo plugin_path="${prefix}/lib" />
  </export>

</package>
